--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -229,6 +229,93 @@ v.027
 
 Добавлены заклинания.
 
+Добавлено снаряжение авантюриста
+
+Добавлено про мастерское оружие.
+
+Добавлено оружие.
+
+Добавлен подраздел Алхимические товары и инструменты
+
+Добавлены деятельности простоя
+
+Добавлен раздел Травничество
+
+Добавлены стрелы в подраздел Аммуниция
+
+Добавлены верховые животные
+
+Добавлен наземный транспорт
+
+Добавлен водный транспорт
+
+Добавлен раздел правил про длительные травмы
+
+Необходимо свести воедино подразделы Алхимические товары и инструменты и Особые субстанции
+
+### 08.10.2023
+
+Добавлен раздел 12 – Бестиарий (в нем будут приведены базовые правила для Бестиария).
+
+### 15.10.2023
+
+4. КЛАССЫ
+5. 
+Необходимо доделать исследовательские приемы
+
+Необходимо доделать опции для клерика, плута, волшебника.
+6. СНАРЯЖЕНИЕ
+   
+Удален подраздел Особые субстанции из Снаряжения – все предметы перенесены в раздел Алхимические предметы
+
+Снаряжение – таблицы отсортированы по алфавиту как и описания
+
+В снаряжении необходимо продолжить правки, удаление дублей, вычитку, единообразное оформление.
+1. ПРИКЛЮЧЕНИЯ
+   
+Расширен раздел Приключения – добавлена информация про потребности персонажа, грузоподъемность и нагрузку
+
+Добавлено ночное зрение
+
+Детализированы темпы путешествия
+
+Добавлены погодные и климатические эффекты
+
+Расширен подраздел Путешествия
+
+Добавлено Приложение Процедура путешествия по гексам
+
+Необходимо расписать исследовательские задачи
+
+Необходимо написать процедуру хода во время путешествия по дикой местности
+
+Необходимо написать процедуру исследования подземелий
+1. СРАЖЕНИЕ
+    
+Необходимо доделать раздел травм и лечения
+
+Необходимо доделать Порог внезапного урона
+
+1.  ОПИСАНИЕ ЗАКЛИНАНИЙ
+    
+Продолжена работа над заклинаниями
+
+Необходима вычитка
+
+1.  БЕСТИАРИЙ
+    
+Добавлены части на английском
+
+Пример дроу воин
+
+### 23.10.2023
+
+Добавлен макрос форматирования текста таблиц
+
+Добавлен макрос добавления названий таблиц
+
+
+
 В файл Core d20 RPG внесены все домашние правила используемые в кампании **Кормир - Хроники Авантюристов**
 
 Добавлено снаряжение авантюриста
@@ -257,3 +344,219 @@ v.027
 Обновлен файл CORED20.XLSX
 
 Необходимо свести воедино подразделы Алхимические товары и инструменты и Особые субстанции
+
+#### БЕСТИАРИЙ
+
+Первоначальный релиз.
+
+Добавлены некоторые статблоки (в т.ч. перенесены из статей про тактику различных существ).
+
+Гладиатор
+
+Министрель
+
+Бандит
+
+Капитан бандитов
+
+Страж
+
+Солдат
+
+Ветеран
+
+Головорез
+
+Шпион
+
+Дроу
+
+Дроу воин
+
+Дроу элитный воин
+
+Дроу жрица Ллос
+
+Дроу волшебник
+
+Дроу капитан дома
+
+Дроу теневой клинок
+
+Орк
+
+Орк (шаблон)
+
+Хобгоблин
+
+Хобгоблин капитан
+
+Хобгоблин Генерал
+
+Хобгоблин адепт ени
+
+Хобгоблин заклинатель
+
+Хобгоблин воин
+
+Хобгоблин боевой жрец
+
+Хобгоблин (шаблон)
+
+Гоблин
+
+Гоблин босс
+
+Гоблин воин
+
+Гоблин вождь
+
+Гоблин жрец
+
+Гоблин наездник на волках
+
+Гоблин мастер боя без оружия
+
+Гоблин шаман
+
+Гоблин аколит
+
+Гоблин лидер
+
+Гоблин налетчик
+
+Гоблин снайпер
+
+Гоблин мастер ловушек
+
+Гоблин (шаблон)
+
+### 30.10.2023
+
+#### СНАРЯЖЕНИЕ
+
+Доработан раздел Доспехи
+
+Доработан раздел Щиты
+
+Доработан раздел Оружие
+
+Опубликован отдельный модуль Доспехи и Щиты
+
+Опубликован отдельный модуль Оружие и Боеприпасы
+
+### НОЯБРЬ 2023
+
+#### СНАРЯЖЕНИЕ
+
+Добавлены подразделы для Инструментов
+
+Добавлен подраздел Описание оружия
+
+#### МАГИЯ
+
+Перенесены правила по использованию очков заклинательства
+
+#### РАЗВИТИЕ ПЕРСОНАЖА
+
+Добавлены подразделы про твердыни, последователей.
+
+#### КЛАССЫ
+
+Волшебнику, Клерику и Плуту добавлены Классовые знания и Репутация класса.
+
+В подразделе “Что такое класс” описаны исследовательские приемы, репутация класса, классовые знания, твердыни и последователи.
+
+#### ЗАКЛИНАНИЯ
+
+В отдельном файле добавлено много заклинаний
+
+### ДЕКАБРЬ 2023
+
+#### ОРУЖИЕ
+
+Свойства оружия
+
+Базовые приемы
+
+Группы оружия
+
+Опции оружия
+
+Уровни владения оружием
+
+Деятельность простоя – Обучение уровню владения оружием
+
+-Оружейные техники
+
+Оружейные приемы
+
+#### ОДЕЖДА
+
+Изменен раздел обычной одежды
+
+#### ТРАВЯНЫЕ СМЕСИ
+
+Добавлен раздел травяные смеси, приведено несколько предметов из этой категории.
+
+#### СНАРЯЖЕНИЕ АВАНТЮРИСТА
+
+Добавлены описания предметов
+
+### ФЕВРАЛЬ 2024
+
+Изменена формулировка сражения двумя оружиями.
+
+В целом пересмотрен раздел Снаряжение.
+
+Переделаны и уточнены Состояния (Приложение 1)
+
+Переделаны и уточнены Действия (Приложения 2)
+
+Переделаны Базовые приемы (Приложение 3)
+
+Добавлены Боевые стили (Приложение 4)
+
+### МАРТ 2024
+
+Улучшена таблица по снаряжению, но все еще необходимо вычитать текст на предмет дублирования строк и нехватающих описаний.
+
+Добавлены черты
+
+Добавлены подрасы
+
+Добавлено описание предыстории
+
+Добавлены предыстории
+
+Добавлены архетипы
+
+Добавлен раздел про продажу предметов
+
+Добавлена информация про языки	
+
+Необходимо уточнить характеристики наземного и водного транспортов.
+
+Необходимо уточнить перечень и описание верховых животных.
+
+Необходимо описать предметы для животных.
+
+Необходимо описать улучшения доспехов и оружия.
+
+Необходимо уточнить описания мастерских предметов.
+
+Необходимо написать раздел про специальные материалы.
+
+Необходима таблица с ценами на специальные материалы.
+
+Необходимо уточнить стоимость написания и продажи свитков.
+
+Необходимо написать раздел про технологические уровни.
+
+Необходимо дописать подраздел про медицинские препараты.
+
+Необходимо уточнить вес наборов.
+
+>(МАТ-МАТ-МАТ) Я почему то внес часть изменений в версию 25. Придется повторять.
+
+Снаряжение – таблицы отформатированы, предметы отсортированы в алфавитном порядке
