--- a/src/content/posts/articles/bestiary-city-guard-captain.mdx
+++ b/src/content/posts/articles/bestiary-city-guard-captain.mdx
@@ -45,8 +45,8 @@ _Средний гуманоид (любой расы), законопослуш
 
 **Обезоруживающая атака.** Рукопашная атака оружием: +5 к попаданию, досягаемость 5 футов, одна цель. Попадание: цель должна совершить спасбросок Силы со КС. 13 или выронит из рук один предмет на выбор капитана. Предмет падает в 10 футах от цели, в том месте, какое выберет капитан.
 
-Приказ атаковать (1/день). Каждое существо на выбор капитана городской стражи, находящееся в пределах 30 футов от него и слышащее его, реакцией совершает одну рукопашную или дальнобойную атаку.
+**Приказ атаковать (1/день).** Каждое существо на выбор капитана городской стражи, находящееся в пределах 30 футов от него и слышащее его, реакцией совершает одну рукопашную или дальнобойную атаку.
 
-Он легко мог бы оказаться по другую сторону закона, но ему нравится, как он выглядит в форме городской стражи, и как городские обыватели смотрят на него, когда он идёт по улице во главе патруля. Невозможно отрицать, что с этими длинными усами и в щегольской шапке он чертовски хорош. Он опытный дознаватель и не боится обнажить клинок, чтобы покончить с любой угрозой своему городу.
+> Он легко мог бы оказаться по другую сторону закона, но ему нравится, как он выглядит в форме городской стражи, и как городские обыватели смотрят на него, когда он идёт по улице во главе патруля. Невозможно отрицать, что с этими длинными усами и в щегольской шапке он чертовски хорош. Он опытный дознаватель и не боится обнажить клинок, чтобы покончить с любой угрозой своему городу.
 
 [Источник](https://vk.com/feed?w=wall-200946551_2787)
