--- a/src/content/posts/articles/bestiary-warhorse-and-warbeast-1.mdx
+++ b/src/content/posts/articles/bestiary-warhorse-and-warbeast-1.mdx
@@ -41,9 +41,9 @@ tags:
 
 [About destrier](https://en.wikipedia.org/wiki/Destrier) —
 
-http://www.medievalchronicles.com/medieval-battles-wars/medieval-warfare/destrier-war-horse/
+[Destrier war horse](http://www.medievalchronicles.com/medieval-battles-wars/medieval-warfare/destrier-war-horse/)
 
-http://www.lordsandladies.org/destrier.htm
+[Destrier](http://www.lordsandladies.org/destrier.htm)
 
 ## Light Warhorse
 
