--- a/src/content/posts/cored20rpg/bestiary-bonus-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-bonus-actions.mdx
@@ -10,7 +10,9 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-Второе дыхание (1/Короткий отдых). %%creaturename%% может бонусным действием восстановить 16 (1к10 + %%level%%) хитов.
+## Бонусные действия
+
+**Второе дыхание (1/Короткий отдых).** %%creaturename%% может бонусным действием восстановить 16 (1к10 + %%level%%) хитов.
 
 ---
 
