--- a/src/content/posts/cored20rpg/bestiary-legendary-actions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-legendary-actions.mdx
@@ -10,6 +10,8 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+## Легендарные действия
+
 ---
 
 [БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
