--- a/src/content/posts/cored20rpg/bestiary-pc-options-for-npc.mdx
+++ b/src/content/posts/cored20rpg/bestiary-pc-options-for-npc.mdx
@@ -13,53 +13,95 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-]СОЗДАНИЕ СУЩЕСТВ С КЛАССАМИ
+## СОЗДАНИЕ СУЩЕСТВ С КЛАССАМИ
+
 На стр. 282 DMG описаны два способа создания NPC с нуля: создание традиционного блока статов или использование того же процесса, что и при создании персонажа игрока. Хотя второй вариант может иметь смысл при создании НИП-компаньона для партии, есть несколько важных причин, по которым использование уровней классов для создания НИП не подходит:
+
 Классы создаются с ресурсами, вкусовыми особенностями лент и другими уникальными способностями, которыми должен заниматься один игрок. ГМу приходится работать с целым ПИ, одновременно управляя остальной частью игры, что отнимает много сил.
+
 Персонажи игроков рассчитаны на то, что их силы хватит на несколько боевых столкновений за день приключений, а монстры рассчитаны на то, что с ними придется победить один раз. Это означает, что NPC, созданные с использованием классовых уровней, будут иметь очень высокий урон по сравнению с их защитными возможностями. Это та же причина, по которой выполнение одного столкновения за день приключений является проблемой, и почему PvP между персонажами в одной партии почти всегда идет не так.
+
 Подводя итог, можно сказать, что не стоит создавать монстров так же, как персонажей игроков. Но тогда возникает вопрос, как сделать блок статистики для монстра, связанного с определенным классом игрока?
 Добавление классов к монстрам
+
 Сначала давайте обсудим официальные варианты. На странице 283 DMG представлен процесс, который можно использовать для присвоения классовых уровней уже существующим монстрам. Вкратце, это то же самое, что и с игроками, но кость хитов у существа остается прежнего размера, а Бонус владения зависит от рейтинга сложности, который вы получаете в итоге.
+
 Этот процесс вполне приличный, если использовать его умеренно. В конце концов, всего один или два уровня бойца не так уж много дают в плане управления ресурсами по сравнению с пятью или шестью уровнями друида. Но и в этом случае данный метод имеет те же изъяны, что и в предыдущем разделе. Кроме того, в том же разделе признается, что добавление классовых уровней к монстру имеет крайне непостоянный эффект на CR. Этого и следовало ожидать: ПИ устроены иначе, чем монстры, поэтому, конечно, все работает по-другому. Тем не менее, это противоречит этапам проектирования существ, описанным в данном документе: если цель состоит в том, чтобы определить целевой CR до создания монстра, то добавление ему классовых уровней будет игрой в угадайку.
+
 Так как же можно сделать лучше? Проще говоря, мы можем создавать монстров, используя индивидуальные классовые особенности и уникальные черты собственного дизайна, которые мы выбираем по мере необходимости.
-Классы в игровом мире
+
+### Классы в игровом мире
+
 Очевидно, что существующие в игре классы игроков не охватывают все существующие источники энергии и архетипы. Кроме того, не все существа одного класса получают одинаковые способности. Вот список некоторых из этих различий:
+
 Не все представители класса получают подкласс. Например, у магов нет Arcane Tradition.
+
 Некоторые представители класса получают новые способности, недоступные игрокам. Например, барды получают способность Taunt, которую обычные барды получить не могут.
+
 Не все представители класса получают определенные свойства класса. Например, некоторые друиды могут не иметь способности "Дикая форма", а другие - вообще не иметь способности "Сотворение заклинаний".
 Некоторые представители класса могут развить свои способности или уменьшить ограничения. Например, у прорицателей есть модифицированная версия Portent, которая прокатывается во время боя, а не после длительного отдыха, и перезаряжается всякий раз, когда прорицатель произносит заклинание прорицания 1-го уровня или выше, а не ограничивается двумя использованиями в день.
+
 Это понимание можно использовать для обоснования того, что монстры, относящиеся к определенным классам, обладают свойствами, недоступными игрокам. Например, воинам можно дать свойство "Преимущество в боевых действиях", а магам и другим могущественным волшебникам - "Устойчивость к урону от заклинаний". Подробнее об этом говорится ниже, в разделе "Примеры характеристик класса монстров". Пока же давайте обсудим, как использовать существующие классовые особенности для монстров.
-Классовые особенности монстров
+
+### Классовые особенности монстров
+
 Стоит отметить, что многие классовые особенности, такие как Action Surge, Cunning Action и Сотворение заклинаний, довольно легко применить к монстрам как таковым. Но есть и такие особенности, как Ki, Metamagic и Wild Shape, которые требуют некоторых модификаций перед тем, как быть переданными монстру.
-Удаление ресурсов
+
+### Удаление ресурсов
+
 Традиционно монстры получают доступ к своим способностям через следующие ресурсы, описанные в The creature Manual:
+
 По желанию: Монстр может использовать эту способность без каких-либо ограничений по ресурсам.
+
 1/Оборот: Монстр может использовать эту способность только один раз за ход, или, возможно, только в каждый из своих ходов.
+
 Перезарядка: Если монстр использует эту способность, то каждый раунд он должен бросить к6, чтобы узнать, сможет ли он использовать ее снова.
+
 Короткий отдых: Если монстр использует эту способность, он не может использовать ее снова, пока не закончит короткий или длительный отдых.
+
 Ячейки заклинаний: Чтобы использовать это заклинание или другую способность, монстр должен потратить ячейку заклинания соответствующего уровня.
+
 X/день: У монстра есть X использований этой способности. Они восстанавливают все использованные способности, когда завершают короткий или длительный отдых.
+
 Многие классовые свойства работают через другие ресурсы, которые можно преобразовать в один из вышеперечисленных:
+
 X раз Короткий отдых: Вместо того чтобы отслеживать использование таких способностей, как Ki и Боевое превосходство, между короткими отдыхами, имеет смысл дать маневрам или ки-искусствам монстра перезарядку на 4-6, или, в зависимости от ситуации, сделать некоторые из них 1/оборот или по желанию.
+
 Канал Прорицания: Вместо того чтобы пользоваться одним ресурсом, можно просто сделать каждый из них независимой способностью "Короткий отдых".
+
 Специальные: Такие способности, как "Фанатичный фокус" варвара-злопыхателя, которые срабатывают только один раз за ярость или ограничены каким-либо другим уникальным способом, обычно следует делать по желанию или при перезарядке.
+
 В целом, следует учитывать, сколько раз за раунд монстр должен использовать определенную особенность. Если вы хотите, чтобы оно сработало только один или два раза, привяжите его к короткому отдыху или сделайте его X/Day. Если вы хотите, чтобы это свойство использовалось часто, но не каждый раунд, сделайте его перезарядкой. Если вы хотите, чтобы она использовалась в течение всего боя, сделайте ее произвольной или превратите в пассивную способность.
 Особенности, которые следует исключить
+
 Не все характеристики класса необходимо давать монстру. В общем случае следует исключить следующие способности:
 Нишевые способности: Если вы не предполагаете, что существо будет использовать эту способность в бою, не добавляйте ее. Например, монстру-жрецу не понадобится способность Turn Undead, если только она не относится к его теме или если в кампании много нежити.
 Бонусы к навыкам: Такие характеристики, как Jack of All Trades и Reliable Talent, могут быть заменены на дополнительные умения. Существо также может получить опыт в определенных навыках, если это необходимо.
+
 Модификаторы: Такие характеристики, как боевой стиль, тактическая смекалка Волшебника и призыв колдуна Lifedrinker, не являются необходимыми, если только они действительно важны для монстра. Например, можно заменить "Тактическое остроумие" преимуществом во всех бросках инициативы, а также просто добавить дополнительные кости некротического урона к оружию ближнего боя боевого мага. Боевой стиль можно вообще исключить, так как КЗ и бонус атаки существа уже кастомизированы в соответствии с CR.
+
 Ресурсные баффы: Такие характеристики, как Arcane Recovery и Tireless Spirit самурайского бойца, обычно не нужны. В последнем случае можно просто выбрать другой ресурс, как обсуждалось в предыдущем разделе.
+
 Extras: Характеристики, добавляющие дополнительные заклинания, заклинания, языки, навыки, инструменты, передвижение, устойчивость и т.д., не нуждаются в записи. Вы можете просто разобрать их и добавить в статистику существа, не упоминая об этой особенности, если не считаете это необходимым.
+
 Небоевые способности: Такие характеристики, как "Знание врага" у мастера боя или "Пытливый глаз" у Плута, могут быть полезны, но они не только нишевые, но и почти полностью относятся к небоевым способностям. Просто исключите их, если не считаете их необходимыми.
-Скалирование уровней
+
+### Скалирование уровней
+
 Некоторые классовые способности, такие как "Второй ветер" и "Сотворение заклинаний", наносят урон или используют его в зависимости от вашего уровня в данном классе. Если вы не добавляете монстру классовые уровни, то как определить, какой уровень он считает? У вас есть два варианта: использовать CR существа или придумать "виртуальный классовый уровень" существа. В конце концов, даже если у существа на самом деле нет уровня класса, оно может представлять определенный уровень класса, и вы можете использовать этот целевой уровень для масштабирования.
+
 В приведенном ниже разделе "Пример характеристик монстра" я использую последний вариант. Не стесняйтесь использовать любой из них или вообще убрать шкалы.
-Обычное против сверхъестественного
+
+### Обычное против сверхъестественного
+
 По мере продвижения по шкале CR становится все труднее и труднее создать монстра, не обладающего какими-либо сверхъестественными атаками (например, сотворением заклинаний) или защитой (например, устойчивостью к урону). Это связано с тем, что сложнее создать "обычного" монстра, который наносит достаточно урона, имеет адекватную защиту, имеет правильное обоснование своих способностей и в целом является интересным существом для сражения. Например, типичному железному голему имеет смысл иметь 210 HP из-за его размеров и материальной составляющей, но гуманоид, сражающийся в яме, с 210 HP обязательно будет одним из сильнейших воинов в регионе или даже во всем сеттинге.
+
 В связи с этим многим боевым существам (особенно представителям классов варвар, боец и плут) для достижения более высокого CR требуются дополнительные атаки, навыки спасбросков, магические предметы, легендарные устойчивости, легендарные действия или врожденные заклинания. Помните об этом при создании монстров.
-ПРИМЕРЫ КЛАССОВЫХ ХАРАКТЕРИСТИК МОНСТРОВ
+
+## ПРИМЕРЫ КЛАССОВЫХ ХАРАКТЕРИСТИК МОНСТРОВ
+
 В дополнение к выбору из существующих характеристик классов и подклассов, рассмотрим возможность использования следующих характеристик для представления монстров, связанных с определенными классами персонажей.
+
 Artificer
 Искусники - сложный класс, поскольку они привязаны к магическим предметам, которых у большинства монстров нет. При этом настойки исчезают из предмета как минимум через день после смерти существа, что позволяет давать мастеру предметы монстров, не опасаясь, что они попадут в руки игроков.
 Основа знаний. Существо может произносить заклинания 1-го уровня по желанию, не расходуя ячейку заклинания.
