--- a/src/content/posts/cored20rpg/bestiary-reactions.mdx
+++ b/src/content/posts/cored20rpg/bestiary-reactions.mdx
@@ -10,9 +10,9 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
-Реакции
+## Реакции
 
-Защитное возмездие. Когда существо в радиусе 5 футов от этого существа совершает атаку против одного из союзников этого существа, существо может своей реакций совершить атаку оружием ближнего боя против атакующего существа.
+**Защитное возмездие.** Когда существо в радиусе 5 футов от этого существа совершает атаку против одного из союзников этого существа, существо может своей реакций совершить атаку оружием ближнего боя против атакующего существа.
 
 ---
 
