--- a/src/content/posts/cored20rpg/bestiary-statblock.mdx
+++ b/src/content/posts/cored20rpg/bestiary-statblock.mdx
@@ -139,6 +139,66 @@ ___
 ### ОПИСАНИЕ
 ```
 
+```
+___
+>## Название
+>*Размер тип (ключевые слова), мировоззрение*
+>___
+>- **Класс Защиты** 15
+>- **Хиты** 85 (10d8 + 40)
+>- **Скорость** 30 ft.
+>___
+>|СИЛ|ЛОВ|ТЕЛ|ИНТ|МУД|ХАР|
+>|:---:|:---:|:---:|:---:|:---:|:---:|
+>|18 (+4)|13 (+1)|18 (+4)|9 (-1)|15 (+2)|10 (+0)|
+>___
+>- **Навыки** Athletics +7, History +2, Survival +5
+>- **Спасброски**
+>- **Прочие владения**
+>- **Устойчивость к урону**
+>- **Уязвимость к урону**
+>- **Иммунитет к урону**
+>- **Иммунитет к состояниям**
+>- **Чувства** пассивное Восприятие хх
+>- **Языки** any one language
+>- **Показатель опасности** 5 (1800 опыта)
+>- **Бонус владения** +3
+>
+> ---
+>
+>**_Уровень._** Эквивалентный уровень персонажа
+>
+>**_Боевой дух._** 12 (выше среднего)
+>
+>**_Особенность._** 
+>
+>**_Специальное снаряжение._**
+>
+>**_Снаряжение._**
+
+>### ДЕЙСТВИЯ
+>***Multiattack.*** The inheritor makes two attacks with its greataxe.
+>
+>***Greataxe.*** *Melee Weapon Attack:* +7 to hit, reach 5 ft., one target. **Hit**: 10 (1d12 + 4) slashing damage.
+>
+>### БОНУСНЫЕ ДЕЙСТВИЯ
+>
+>### РЕАКЦИИ
+>***Spirit Shield.*** When a creature the inheritor can see within 30 feet of it takes damage from an attack, the inheritor can use its reaction to provide aid through its ancestral spirits, reducing the damage by 7 (2d6) hit points.
+>
+>### ДЕЙСТВИЯ ЧЕМПИОНА
+>
+>### ЛЕГЕНДАРНЫЕ ДЕЙСТВИЯ
+
+### Логово
+
+>### ДЕЙСТВИЯ ЛОГОВА
+
+#### Региональные особенности
+
+### ОПИСАНИЕ
+```
+
 ---
 
 > ## ВОИН ДРОУ
