--- a/src/content/posts/cored20rpg/bestiary-traits.mdx
+++ b/src/content/posts/cored20rpg/bestiary-traits.mdx
@@ -10,6 +10,9 @@ tags:
 author: Антон "Palant" Палихов
 ---
 
+
+## Особенности существ
+
 Action Surge (1/SR). В свой ход %%creaturename%% совершает дополнительное действие.
 
 Храбрость. У %%creaturename%% есть преимущество в Спасбросках против испуга.
