--- a/src/content/singles/cored20rpg.mdx
+++ b/src/content/singles/cored20rpg.mdx
@@ -128,13 +128,15 @@ v.027
    
 2.  [СТАТБЛОК](https://cyborgsandmages.com/posts/cored20rpg/bestiary-statblock)
    
-3.  ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ
+3.  [ОСОБЕННОСТИ ВИДОВ СУЩЕСТВ]
    
 4.  [ШАБЛОНЫ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-templates)
    
 5.  [ДЕЙСТВИЯ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-actions)
    
 6.  [ОСОБЕННОСТИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-traits)
+
+[КЛАССОВЫЕ ОСОБЕННОСТИ ДЛЯ СУЩЕСТВ](https://cyborgsandmages.com/posts/cored20rpg/pc-options-for-npc)
 
 [Бестиарий начало](https://cyborgsandmages.com/posts/core-d20/bestiary-beginnings)
 
@@ -146,6 +148,13 @@ v.027
 
 [Шаблон - Лютый](https://cyborgsandmages.com/posts/core-d20/bestiary-dire-template)
 
+[ЗВЕРИ]
+
+[НЕИГРОВЫЕ ПЕРСОНАЖИ]
+
+[ШАБЛОНЫ ОБШИЕ]
+
+[ШАБЛОНЫ СПЕЦИАЛЬНЫЕ]
 
 ---
 
