--- a/src/content/posts/cored20rpg/bestiary.mdx
+++ b/src/content/posts/cored20rpg/bestiary.mdx
@@ -9,6 +9,187 @@ tags:
   - Core d20 RPG
   - D&D 5e
 ---
+## Стражник
+
+_**Стражник**_
+
+_Средний гуманоид (любая раса), любое_
+
+**Хиты** 9/4 \[ 18/9 \] (2к8+2)
+
+**Класс Защиты** 13 (кольчатый доспех), 15 с щитом
+
+**Скорость** 30 футов
+
+**СИЛ** **ЛОВ** **ТЕЛ** **ИНТ** **МУД** **ХАР**
+
+13 (+1) 10 (+0) 12 (+1) 10 (+0) 10 (+0) 10 (+0)
+
+**Навыки** Атлетика +3, Восприятие +2
+
+**Спасброски** Телосложени +3, Мудрость +2
+
+**Прочие навыки** все доспехи, щиты, простое оружие, одно воинское оружие, Верховая езда (наземный), Транспорт (наземный)
+
+**Чувства** пассивное Восприятие 12
+
+**Языки** Всеобщий, региональный или расовый язык
+
+**Опасность** 1/8 (25 опыта) или 1/4 (50 опыта)
+
+**Уровень существа** 1 **Бонус владения** +2
+
+**Боевой дух** 12 (Стойкий)
+
+**_Воинское обучение._** Стражник получает +1 к попаданию атаками оружием и +1 к КС боевых приемов.
+
+**_Снаряжение._** Кольчатый доспех, тяжелый щит, копье, булава, легкий арбалет, колчан с 20 арбалетными болтами, кинжал, униформа (обычная одежда), сигнальный рог, свисток, 4 факела, огниво, кошель с 1к6 см.
+
+**Действия**
+
+**_Копье._** Атака оружием ближнего боя, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 4 (1к6+1) колющего урона.
+
+**_Булава._** Атака оружием ближнего боя, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 4 (1к6+1) дробящего урона.
+
+**_Легкий арбалет._** Дальнобойная атака оружием, +3 к попаданию, дистанция 80/320 футов, одна цель. Попадание: 5 (1к8+1) колющего урона. 20 болтов
+
+**_Кинжал._** Атака оружием ближнего боя, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 3 (1к4+1) колющего урона.
+
+**Бонусные действия**
+
+**_Толчок щитом._** Цель должна совершить успешно проверку Силы (Атлетики) или Ловкости (Акробатики) против КС 12 или быть сбитой с ног.
+
+**Реакции**
+
+**_Блокирование щитом._** Стражник подставляет под успешную атаку в ближнем бою свой щит, который принимает весь урон от этой атаки. В случае превышения урона над остатком хитов щита, разницу получает стражник. Порог урона щита 5, хиты 15.
+
+## **Капрал - Модификации статблока стражника**
+
+Патрули стражников возглавляются капралами, которые используют статблок стражника со следующими изменениями.
+
+**КЗ** 14 (чешуйчатый доспех), с щитом 16
+
+**Хиты** 16/8 \[27/13\] (3к8 + 3)
+
+**Опасность** 1/2 (50)
+
+**Уровень существа** 2
+
+**Снаряжение.** Вместо булавы капрал вооружен длинным мечом.
+
+**Длинный меч.** Атака оружием ближнего боя, +4 к попаданию, досягаемость 5 футов, одна цель. Попадание: 5 (1к8+1) рубящего урона.
+
+> Стражник – это представитель городской стражи или дозора. Обычно они патрулируют улицы города отрядом из 1к4 стражников и 1 капрала. В случае необходимости стражник может поднять тревогу затрубив в рог действием, после чего в течении 5 (1к6+2) минут на помощь придет подкрепление.
+
+## Light Warhorse
+
+_Large beast, unaligned_
+
+**Armor Class** 12 (natural armor)
+
+**Hit Points** 26 (3d10 + 9)
+
+**Speed** 60 ft.
+
+**STR DEX CON INT WIS CHA**
+
+16 (+3) 12 (+1) 17 (+3) 2 (-4) 12 (+1) 7 (-2)
+
+**Skills** Athletics +5, Perception +3
+
+**Senses** Passive Perception 13
+
+**Languages** —
+
+**Challenge** 1/2 (100 XP)
+
+**Rider control.** If rider is nearby, light warhorse has advantage on saving throws against charmed and frightened condition.
+
+**Combat trained.** Light warhorse is proficient with light and medium armor. Also a rider on heavy warhorse gets a advantage on all checks to maintain control or not dropping from saddle.
+
+### Actions
+
+**Hooves.** Melee Weapon Attack: +5 to hit, reach 5 ft., one target. Hit: 10 (2d6 + 3) bludgeoning damage.
+
+### Possible traits
+
+Any light warhorse can have two of those traits.
+
+**Mobile Charge.**  After galloping for 20 feet or more, this creature does not provoke attacks of opportunity when moving in or out of range of any enemy.
+
+**Trampling Charge.** If the horse moves at least 20 feet straight toward a creature and then hits it with a hooves attack on the same turn, that target must succeed on a DC 14 Strength saving throw or be knocked prone. If the target is prone, the horse can make another attack with its hooves against it as a bonus action.
+
+**Endurance.** A light warhorse makes Constitution saving throw against exhausted with advantage.
+
+**Run.** A light warhorse can make a Dash as bonus action.
+
+## Heavy Warhorse
+
+_Large beast, unaligned_
+
+**Armor Class** 12 (natural armor)
+
+**Hit Points** 34 (4d10 + 12)
+
+**Speed** 50 ft.
+
+**STR DEX CON INT WIS CHA**
+
+18 (+4) 12 (+1) 17 (+3) 2 (-4) 12 (+1) 7 (-2)
+
+**Skills** Athletics +6, Perception +3
+
+**Senses** Passive Perception 13
+
+**Languages** —
+
+**Challenge** 1 (200 XP)
+
+**Rider control.** If rider is nearby, heavy warhorse has advantage on saving throws against charmed and frightened condition.
+
+**Heavy Combat Trained.** Heavy warhorse is proficient with light, medium and heavy armor. Also a rider on heavy warhorse gets a advantage on all checks to maintain control or not dropping from saddle.
+
+### Actions
+
+**Hooves.** Melee Weapon Attack: +6 to hit, reach 5 ft., one target. Hit: 11 (2d6 + 4) bludgeoning damage.
+
+### Possible traits
+
+Any heavy warhorse can have three of those traits.
+
+**Trampling Charge.** If the horse moves at least 20 feet straight toward a creature and then hits it with a hooves attack on the same turn, that target must succeed on a DC 14 Strength saving throw or be knocked prone. If the target is prone, the horse can make another attack with its hooves against it as a bonus action.
+
+**Mobile Charge.**  After galloping for 20 feet or more, this creature does not provoke attacks of opportunity when moving in or out of range of any enemy.
+
+**Endurance.** A heavy warhorse makes Constitution saving throw against exhaustion with an advantage.
+
+**Run.** A heavy warhorse can make a Dash as bonus action.
+
+### Horse Traits
+
+Nag, broken-down, and average
+Biter
+Kicks
+Steps on feet
+Won’t gallop
+Chews fences
+Stops occasionally
+Rubs against fences
+Bucks
+Untrained
+High-spirited and chargers
+Bucks
+Bonejarring
+Bites
+Single rider
+Rears
+Headstrong
+Kicks
+Leaper
+Knows trick
+or DM choice\*
+
+Other possibilities include robust, fleet, fearless, skittish, strong stable, gentle, surefooted, etc
 
 ---
 
