--- a/src/content/posts/cored20rpg/firearms.mdx
+++ b/src/content/posts/cored20rpg/firearms.mdx
@@ -112,11 +112,10 @@ author: Антон "Palant" Палихов
 | --------------------------- | ---- | -------------------- | --- |
 | Карманные пистолеты.        | 1к8  | малый                | 8   |
 | Гражданские пистолеты.      | 1к10 | пистолетный          | 10  |
-| Полицейские пистолеты.      | 1к12 | пистолетный          | 12  |
-| Армейские пистолеты.        | 2к6  | пистолетный          | 12  |
-| Револьвер                   | 2к6  | пистолетный          | 12  |
-| Крупнокалиберные пистолеты. | 2к8  | промежуточный калибр | 16  |
-
+| Полицейские пистолеты.      | 1к12 | пистолетный          |
+| Армейские пистолеты.        | 2к6  | пистолетный          |
+| Револьвер                   | 2к6  | пистолетный          |
+| Крупнокалиберные пистолеты. | 2к8  | промежуточный калибр |
 Базовый урон для винтовок и используемая аммуниция
 
 | КАТЕГОРИЯ                    | УРОН | КАЛИБР               |     |
@@ -238,71 +237,71 @@ FLINTLOCK Кремневое оружие
 | Пистолет, Квартет Рейгара                                      |               |                                  |             |                                                                                          |
 | Длинноствольная многозарядная винтовка Рейгара, Огненный Шторм |               |                                  |             |                                                                                          |
 
-**Армейская винтовка.** Армейская винтовка встречается довольно редко, поскольку в Доминионе мало специальных стрелковых полков, хотя их использование растет, особенно пограничных провинциях. Обычно длиной около 4 футов и медленная в обращении, военная винтовка является мощным оружием со значительной дальностью стрельбы и магазином на 5 патронов.
+**Винтовка, армейская.** Армейская винтовка встречается довольно редко, поскольку в Доминионе мало специальных стрелковых полков, хотя их использование растет, особенно пограничных провинциях. Обычно длиной около 4 футов и медленная в обращении, военная винтовка является мощным оружием со значительной дальностью стрельбы и магазином на 5 патронов.
 
 **Винтовка, рычажная.** Редкий продукт мастеров-оружейников, винтовки рычажного действия хранят дополнительные патроны в трубчатом магазине под стволом, а каждый новый патрон заряжается с помощью рычага, являющегося частью спусковой скобы. Они сложны и трудны в изготовлении, что делает их ценным достоянием тех, кому посчастливилось стать обладателем такой винтовки.
 
-Винтовка, длиннствольная. Эта винтовка использует меньший снаряд и не обладает ударной силой и дальностью стрельбы, как военная винтовка. Однако она значительно легче и менее громоздка. Как следует из названия, эти винтовки длинные, обычно 4 фута от ложа до ствола. Это оружие - фактически эволюция военной винтовки, созданная разведчиками и стрелками, которые были готовы отказаться от некоторой дальности стрельбы ради более быстрой перезарядки. Его немного сложнее изготовить, чем военную винтовку, из-за прецизионного ствола и механизма стрельбы. Перезарядка: 1 действие
+**Винтовка, длиннствольная.** Эта винтовка использует меньший снаряд и не обладает ударной силой и дальностью стрельбы, как военная винтовка. Однако она значительно легче и менее громоздка. Как следует из названия, эти винтовки длинные, обычно 4 фута от ложа до ствола. Это оружие - фактически эволюция военной винтовки, созданная разведчиками и стрелками, которые были готовы отказаться от некоторой дальности стрельбы ради более быстрой перезарядки. Его немного сложнее изготовить, чем военную винтовку, из-за прецизионного ствола и механизма стрельбы. Перезарядка: 1 действие
 
-Гарпунное ружье.
+**Гарпунное ружье.**
 
-Длинноствольный мушкет. Длинноствольный вариант мушкета, пригодный как для охоты, так и для ведения боевых действий.
+**Мушкет, длинноствольный.** Длинноствольный вариант мушкета, пригодный как для охоты, так и для ведения боевых действий.
 
-Ружье. Чаще всего ружье представляет собой двуствольное оружие, имеющее очень малую дальность стрельбы по сравнению с винтовкой; тем не менее, при правильном использовании он может нанести огромный ущерб. Вместо того, чтобы стрелять одним снарядом за раз, как винтовка, ружье выбрасывает в цель струю мелких дробинок. Трудно поймать более одной цели одновременно в пределах дальности стрельбы оружия на достаточно близком расстоянии, чтобы быть эффективным.
+**Ружье.** Чаще всего ружье представляет собой двуствольное оружие, имеющее очень малую дальность стрельбы по сравнению с винтовкой; тем не менее, при правильном использовании он может нанести огромный ущерб. Вместо того, чтобы стрелять одним снарядом за раз, как винтовка, ружье выбрасывает в цель струю мелких дробинок. Трудно поймать более одной цели одновременно в пределах дальности стрельбы оружия на достаточно близком расстоянии, чтобы быть эффективным.
 
-Карабин. Карабин - это просто мушкет или винтовка с более коротким стволом. Он широко распространен в кавалерийских войсках, поскольку из него легче стрелять с лошади, чем из более длинного огнестрельного оружия.
+**Карабин.** Карабин - это просто мушкет или винтовка с более коротким стволом. Он широко распространен в кавалерийских войсках, поскольку из него легче стрелять с лошади, чем из более длинного огнестрельного оружия.
 
-Крупнокалиберная снайперская винтовка.
+**Крупнокалиберная снайперская винтовка.**
 
-Мушкет. Мушкет - это оружие с кремневым замком, в котором для воспламенения пороха используется сталь на кремне. Он все еще медленно заряжается, но имеет несколько большую дальность стрельбы, обладает большей силой удара и меньше весит. Удлиненный ствол этого оружия, достигающий общей длины более пяти с половиной футов, является попыткой обеспечить точность стрельбы на дальних дистанциях.
+**Мушкет.** Мушкет - это оружие с кремневым замком, в котором для воспламенения пороха используется сталь на кремне. Он все еще медленно заряжается, но имеет несколько большую дальность стрельбы, обладает большей силой удара и меньше весит. Удлиненный ствол этого оружия, достигающий общей длины более пяти с половиной футов, является попыткой обеспечить точность стрельбы на дальних дистанциях.
 
 Мушкетон. Ручной мушкетон (в нашем мире его обычно называют "драконом", но в фэнтези с настоящими драконами - не очень!) - это одноручный мушкетон, и он может использовать импровизированные выстрелы, как обычный мушкетон, но его импровизированный урон снижается до iк4. В ближнем бою ручной мушкетон может быть использован как дубина, наносящая iк4 урона. Blunderbuss. Это оружие может стрелять в обычном режиме или заряжаться, чтобы сделать рассеивающий выстрел, атакующий всех существ в пределах 15-футового конуса. Каждое существо в этом конусе должно успешно выполнить бросок на ловкость DC 15 или получить 1к6 колющего урона. Для использования рассеивающего выстрела требуется одна горсть патронов с пульками. // : Несколько недоработанное оружие, в лучшем случае считающееся прототипом, поскольку с ним опасно работать, внешне напоминает военную винтовку, но с более крупным стволом и стреляющей камерой. Он стреляет большим самодельным зарядом, содержащим несколько несочетающихся снарядов или собранных осколков, посылая их в виде разлетающихся брызг на небольшое расстояние. Выстрел наносит значительный урон, может поразить более одной цели и эффективен против некоторых существ, на которых колющий урон обычно не действует, например, скелетов. У этого выстрела есть некоторые недостатки. Прежде всего, при каждом выстреле из мушкетона существует вероятность l-in-20, что он даст осечку и взорвется, нанеся владельцу 2к4 урона. Кроме того, для заряжания мушкетона требуется три стандартных действия, так как его импровизированные боеприпасы состоят из двух частей: сначала заряжается шрапнель, а затем пороховой заряд. Эффективная дальность стрельбы мушкетона составляет 30 футов, он атакует две соседние цели в пределах прямой видимости. Основная цель получает половину урона от взрыва при успешном спасброске на рефлекс; любая соседняя цель, если она поражена, автоматически получает половину урона. Требуемый DC спасения равен броску атаки стрелка. Мушкетоны обычно имеют длину 3 фута. Перезарядка требует 2 стандартных действий и проверки навыка Ремесло (стрелковое оружие) (DC 14). Стоимость боеприпасов: специальная.
 
-Охотничья винтовка. Более сложное, чем мушкет, охотничье ружье имеет казнозарядный механизм и стреляет патронами. Большая дальность стрельбы делает ее популярной среди охотников и стрелков, хотя они не так распространены и дешевы, как мушкеты или аркебузы.
+**Охотничья винтовка.** Более сложное, чем мушкет, охотничье ружье имеет казнозарядный механизм и стреляет патронами. Большая дальность стрельбы делает ее популярной среди охотников и стрелков, хотя они не так распространены и дешевы, как мушкеты или аркебузы.
 
-Пистолет.
+**Пистолет.**
 
-Пистолет, карманный. Карманный пистолет - это небольшое, размером с ладонь, огнестрельное оружие, предназначенное для скрытого ношения. Карманный пистолет дает преимущество при проверке ловкости (ловкость рук), когда Вы прячете его на себе. Недостатком карманного пистолета является то, что он имеет очень малую дальность действия, а его пули летят медленнее, нанося меньший урон, чем пули обычного пистолета. Кроме того, компактная конструкция карманного пистолета ограничивает его применение одно- или двуствольными моделями.
+**Пистолет, карманный.** Карманный пистолет - это небольшое, размером с ладонь, огнестрельное оружие, предназначенное для скрытого ношения. Карманный пистолет дает преимущество при проверке ловкости (ловкость рук), когда Вы прячете его на себе. Недостатком карманного пистолета является то, что он имеет очень малую дальность действия, а его пули летят медленнее, нанося меньший урон, чем пули обычного пистолета. Кроме того, компактная конструкция карманного пистолета ограничивает его применение одно- или двуствольными моделями.
 
-Пистолет, револьвер. Револьверы, считающиеся многими вершиной ручного огнестрельного оружия, используют вращающиеся каморы с одним стволом. Они надежны, их легче чистить и перезаряжать, они могут стрелять шесть раз до перезарядки. Однако их механическая сложность иногда затрудняет их поиск или приобретение.
+**Пистолет, револьвер.** Револьверы, считающиеся многими вершиной ручного огнестрельного оружия, используют вращающиеся каморы с одним стволом. Они надежны, их легче чистить и перезаряжать, они могут стрелять шесть раз до перезарядки. Однако их механическая сложность иногда затрудняет их поиск или приобретение.
 
-Пистолет, тяжелый револьвер. Увеличенная версия обычного револьвера рассчитанная на использование патронов большего калибра.
+**Пистолет, тяжелый револьвер.** Увеличенная версия обычного револьвера рассчитанная на использование патронов большего калибра.
 
-Пистоль.
+**Пистоль.**
 
-Пистолет, двуствольный. Являясь небольшим усовершенствованием пистоля с кремневым замка, пистолет имеет два ствола, уложенных друг на друга, и является более надежным. В некоторых местах они часто встречаются у стражников и солдат.
+**Пистолет, двуствольный.** Являясь небольшим усовершенствованием пистоля с кремневым замка, пистолет имеет два ствола, уложенных друг на друга, и является более надежным. В некоторых местах они часто встречаются у стражников и солдат.
 
-Снайперская винтовка. Снайперские винтовки - это, по сути, армейские винтовки, которые были обработаны с более высокой степенью точности и качества. Это обеспечивает лучшую дальность стрельбы, больший урон, но при этом требует большего веса и навыков изготовления, и зачастую их бывает очень трудно найти.
+**Снайперская винтовка.** Снайперские винтовки - это, по сути, армейские винтовки, которые были обработаны с более высокой степенью точности и качества. Это обеспечивает лучшую дальность стрельбы, больший урон, но при этом требует большего веса и навыков изготовления, и зачастую их бывает очень трудно найти.
 
-Ракетница. Ракетница может стрелять на расстояние до 250 футов, но при использовании в качестве оружия она имеет небольшой радиус действия 10 футов. Существо, пораженное ракетницей, должно совершить спасбросок Телосложения со КС 12, иначе будет ослеплено до конца своего следующего хода. Вспышка излучает яркий свет на 60 футов и тусклый свет на следующие 60 футов и горит 2к6 раундов. Осветительные ракеты доступны по 5 зм каждая, они горят в течение 1 минуты и имеют парашюты, которые удерживают их в подвешенном состоянии на время их действия.
+**Ракетница.** Ракетница может стрелять на расстояние до 250 футов, но при использовании в качестве оружия она имеет небольшой радиус действия 10 футов. Существо, пораженное ракетницей, должно совершить спасбросок Телосложения со КС 12, иначе будет ослеплено до конца своего следующего хода. Вспышка излучает яркий свет на 60 футов и тусклый свет на следующие 60 футов и горит 2к6 раундов. Осветительные ракеты доступны по 5 зм каждая, они горят в течение 1 минуты и имеют парашюты, которые удерживают их в подвешенном состоянии на время их действия.
 
-Комбинированное оружие.
+**Комбинированное оружие.**
 
 ## Прочее
 
-Бомба
+**Бомба**
 
-Граната
+**Граната**
 
-Граната, дымовая
+**Граната, дымовая**
 
-Граната, ослепляющая
+**Граната, ослепляющая**
 
-Граната, усыпляющий газ
+**Граната, усыпляющий газ**
 
-Граната, антимагическая
+**Граната, антимагическая**
 
-Граната, осветительная
+**Граната, осветительная**
 
 ## Аммуниция для огнестрельного оружия
 
 В зависимости от используемого в оружии механизма заряжания могут использоваться различные виды амуниции.
 
-Пули и порох. Пули и порох это простейшие заряды для огнестрельного оружия.
+**Пули и порох.** Пули и порох это простейшие заряды для огнестрельного оружия.
 
-Бумажные патроны. В бумажных патронах заранее развешены нужные порции пороха и уложены пули, что ускоряет перезарядку.
+**Бумажные патроны.** В бумажных патронах заранее развешены нужные порции пороха и уложены пули, что ускоряет перезарядку.
 
-Гильзы. У гильзовых патронов для огнестрельного оружия можно выделить следующие калибры по их мощности: малый, пистолетный, промежуточный, винтовочный, магнум, тяжелый калибр.
+**Гильзы.** У гильзовых патронов для огнестрельного оружия можно выделить следующие калибры по их мощности: малый, пистолетный, промежуточный, винтовочный, магнум, тяжелый калибр.
 
 | **Предмет**               | **Стоимость, зм** | **Вес, фунтов** |
 | ------------------------- | ----------------- | --------------- |
